Se sube vista de equipo en clínica sin vista de perfil

--- a/web/templates/clinica/equipo.html
+++ b/web/templates/clinica/equipo.html
@@ -82,13 +82,11 @@
                                                         {% for director in directores %}
                                                         <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                                             <figure class="thumbnail-josip thumbnail-spacing">
-                                                                <a href="#"><img width="270" height="270" src="{{ director.foto.url }}" alt=""/></a>
-                                                                <div class="thumbnail-desc">
-                                                                    <h5 class="thumbnail-josip-title text-bold text-white">{{ director.nombre_completo}}</h5>
+                                                                <img width="270" height="270" src="{{ director.foto.url }}" alt=""/>
+                                                                <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ director.nombres }}</h6>
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ director.apellido_paterno }} {{ director.apellido_materno }}</h6>
                                                                 </div>
-                                                                <figcaption>
-                                                                    <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
-                                                                </figcaption>
                                                             </figure>
                                                         </div>
                                                         {% endfor %}
@@ -103,13 +101,11 @@
                                                         {% for enfermera in enfermeras %}
                                                         <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                                             <figure class="thumbnail-josip thumbnail-spacing">
-                                                                <a href="#"><img width="270" height="270" src="{{ enfermera.foto.url }}" alt=""/></a>
-                                                                <div class="thumbnail-desc">
-                                                                    <h5 class="thumbnail-josip-title text-bold text-white">{{ enfermera.nombre_completo}}</h5>
+                                                                <img width="270" height="270" src="{{ enfermera.foto.url }}" alt=""/>
+                                                                <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ enfermera.nombres }}</h6>
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ enfermera.apellido_paterno }} {{ enfermera.apellido_materno }}</h6>
                                                                 </div>
-                                                                <figcaption>
-                                                                    <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
-                                                                </figcaption>
                                                             </figure>
                                                         </div>
                                                         {% endfor %}
@@ -124,13 +120,11 @@
                                                         {% for tecnico in tecnicos %}
                                                         <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                                             <figure class="thumbnail-josip thumbnail-spacing">
-                                                                <a href="#"><img width="270" height="270" src="{{ tecnico.foto.url }}" alt=""/></a>
-                                                                <div class="thumbnail-desc">
-                                                                    <h5 class="thumbnail-josip-title text-bold text-white">{{ tecnico.nombre_completo}}</h5>
+                                                                <img width="270" height="270" src="{{ tecnico.foto.url }}" alt=""/>
+                                                                <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ tecnico.nombres }}</h6>
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ tecnico.apellido_paterno }} {{ tecnico.apellido_materno }}</h6>
                                                                 </div>
-                                                                <figcaption>
-                                                                    <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
-                                                                </figcaption>
                                                             </figure>
                                                         </div>
                                                         {% endfor %}
@@ -145,13 +139,11 @@
                                                         {% for secretaria in secretarias %}
                                                         <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                                             <figure class="thumbnail-josip thumbnail-spacing">
-                                                                <a href="#"><img width="270" height="270" src="{{ secretaria.foto.url }}" alt=""/></a>
-                                                                <div class="thumbnail-desc">
-                                                                    <h5 class="thumbnail-josip-title text-bold text-white">{{ secretaria.nombre_completo}}</h5>
+                                                                <img width="270" height="270" src="{{ secretaria.foto.url }}" alt=""/>
+                                                                <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ secretaria.nombres }}</h6>
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ secretaria.apellido_paterno }} {{ secretaria.apellido_materno }}</h6>
                                                                 </div>
-                                                                <figcaption>
-                                                                    <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
-                                                                </figcaption>
                                                             </figure>
                                                         </div>
                                                         {% endfor %}
@@ -166,13 +158,11 @@
                                                         {% for auxiliar in auxiliares %}
                                                         <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                                             <figure class="thumbnail-josip thumbnail-spacing">
-                                                                <a href="#"><img width="270" height="270" src="{{ auxiliar.foto.url }}" alt=""/></a>
-                                                                <div class="thumbnail-desc">
-                                                                    <h5 class="thumbnail-josip-title text-bold text-white">{{ auxiliar.nombre_completo}}</h5>
+                                                                <img width="270" height="270" src="{{ auxiliar.foto.url }}" alt=""/>
+                                                                <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ auxiliar.nombres }}</h6>
+                                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ auxiliar.apellido_paterno }} {{ auxiliar.apellido_materno }}</h6>
                                                                 </div>
-                                                                <figcaption>
-                                                                    <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
-                                                                </figcaption>
                                                             </figure>
                                                         </div>
                                                         {% endfor %}
